<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  >
  <TextView
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:background="@drawable/title"
  	android:text="@string/app_name"
  	android:gravity="center"
  	android:textSize="24sp"
  />
  <LinearLayout
  	android:layout_width="fill_parent"
  	android:layout_height="0dp"
  	android:layout_weight="1"
  	android:background="#CCCCCC"
  	android:orientation="vertical"
  >
  <TextView
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/help"
  	android:layout_margin="15dp"
  	android:gravity="center"
  	android:textSize="20sp"
  	android:textColor="#000000"
  />  
  <Button
    android:id="@+id/choosepic"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center"
  	android:layout_marginTop="10dp"
  	android:layout_marginBottom="10dp"
  	android:background="@drawable/button"
  	android:text="@string/select_pic" 
  	android:textSize="16sp"
  />
  <View
   	android:layout_width="fill_parent"
  	android:layout_height="0dp"
  	android:layout_weight="1" 
  />
  <TextView
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/website"
  	android:layout_margin="0dp"
  	android:layout_gravity="center"
  	android:gravity="center_horizontal|bottom"
  	android:linksClickable="true"
  	android:autoLink="web"
  />
  <TextView
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/author"
  	android:layout_margin="5dp"
  	android:layout_gravity="center"
  	android:gravity="center_horizontal|bottom"
  	android:textColor="#444444"
  />
  </LinearLayout>
</LinearLayout>
